# ZhemingDong

./: README.md
Yolov5-cpp/: README_CN.md
Yolov5-cpp/inc/: model_process.h  udpTransmit.h
Yolov5-cpp/lib/: libcrypto.so.1.1  libkmc.so.20  libssl.so.1.1
Yolov5-cpp/scripts/: sample_build.sh
Yolov5-cpp/src/: CMakeLists.txt  main.cpp  model_process.cpp
yolov5-ascend/: CMakeLists.txt  README_CN.md
yolov5-ascend/inc/: dsmi_common_interface.h  dvpp_preProcess.h  inference.h  model_process.h  utils.h
yolov5-ascend/lib/: libascend_protobuf.so.3.13.0.0  libsdp.so.20  libteec.so.1
yolov5-ascend/scripts/: sample_run.sh
yolov5-ascend/src/: CMakeLists.txt  dvpp_preProcess.cpp  inference.cpp  main.cpp  model_process.cpp  udpTransmit.cpp
yolov5-ascend/yolov5-streamlit/: create_json.py  detect.py  export.py  image.json  main.py  requirements.txt
yolov5-ascend/yolov5-streamlit/models/: common.py  yolo.py
yolov5-ascend/yolov5-streamlit/models/hub/: yolov5s-ghost.yaml
yolov5-ascend/yolov5-streamlit/utils/: dataloaders.py  loss.py  metrics.py
yolov5-ascend/yolov5-training/models/hub/: yolov5s-ghost.yaml
